# sync-rs

./: Cargo.toml  README.md
docs/: arch.md  correct-create-file.md  correctly-send-chunks.md  decode_chunk_performance.md  issue1_async_trait.md  parse-uuid-correctly.md
examples/: incre_hash.rs
src/: chunk.rs  config.rs  errors.rs  lib.rs  protocol.rs  tcp.rs
src/client/: main.rs
src/server/: main.rs
src/transport/: client.rs  mod.rs  server.rs
