[package]
name = "sync-rs"
version = "0.1.0"
edition = "2024"
authors = ["forfd8960 <forfd8960@gmail.com>"]
description = "Sync Files to Local or Remote Server"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[[bin]]
name="client"
path="src/client/main.rs"

[[bin]]
name="server"
path="src/server/main.rs"
