[package]
name = "sync-rs"
version = "0.1.0"
edition = "2024"
authors = ["forfd8960 <forfd8960@gmail.com>"]
description = "Sync Files to Local or Remote Server"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
bytes = "1.12.0"
futures = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-retry2 = {version = "0.9.1", features = ["jitter"] }
tokio-util = { version = "0.7.18", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.23.3", features = ["v4"] }

[[bin]]
name="client"
path="src/client/main.rs"

[[bin]]
name="server"
path="src/server/main.rs"
